# filament

./: CMakeLists.txt  building.txt
filament/src/materials/antiAliasing/: taa.mat
libs/filamat/include/filamat/: MaterialBuilder.h
libs/filamat/src/: MaterialBuilder.cpp
libs/filamat/src/shaders/: MaterialInfo.h  ShaderGenerator.cpp
libs/filamentapp/: CMakeLists.txt
libs/gltfio/include/gltfio/: Animator.h
libs/gltfio/src/: Animator.cpp  AssetLoader.cpp  DracoCache.h  FFilamentAsset.h  GltfEnums.h  MaterialGenerator.cpp  MorphHelper.cpp  MorphHelper.h  ResourceLoader.cpp  TangentsJob.h
libs/utils/include/utils/: Path.h
libs/utils/src/: Path.cpp
shaders/src/: light_directional.fs  light_indirect.fs  shading_model_standard.fs
tools/filamesh/src/: main.cpp
toony/: CMakeLists.txt
toony/include/: Settings.h  SimpleViewer.h  jsonParseUtils.h
toony/src/: Settings.cpp  SimpleViewer.cpp  toony_viewer.cpp
